@@ -6,8 +6,8 @@
   "build-depends": [
   ],
   "depends": [
-    "Date::Utils",
     "UUID::V4",
+    "LocalTime",
     "Timezones::US"
   ],
   "description": "Provides time zone and Daylight Saving Time (DST) infomation for US states and territories",
