@@ -32,9 +32,11 @@ time for creating calendars and almanacs. For example, local Sunrise is
 given in UTC and will normally be shown on a calendar in local time:
 
 =begin code
-my $tz = DateTime.new: :timezone('CST');
-my $sunriseZ = DateTime.new: "2022-10-03T05:45:00Z";
+my $tz = DateTime::US.new: :timezone<CST>;
+my $sunriseZ = DateTime.new: "2024-02-21T12:23:00Z";
+say $sunriseZ; # OUTPUT: «2024-02-21T12:23:00Z␤»
 my $localtime = $tz.to-localtime :utc($sunriseZ);
+say $localtime; # OUTPUT: «2024-02-21T06:23:00 CST␤»
 =end code
 
 =head2 Class methods
