@@ -1,6 +1,10 @@
 Revision history for DateTime-US
 
 {{$NEXT}}
+    - Use LocalTime to add correct suffix to local time output
+    - Correct README example
+    - Correct errors in use of LocalTime
+    - Remove some old comments in code
 
 0.1.3  2024-02-11T11:38:40-06:00
     - Remove all reduntant DST test data into a separate file
